[gd_scene load_steps=11 format=3 uid="uid://bvptkmhc5ng2e"]

[ext_resource type="Script" path="res://scripts/network_login.gd" id="1_fn6r5"]
[ext_resource type="PackedScene" uid="uid://y8yq0hcklqwl" path="res://entities/player.tscn" id="3_egyge"]

[sub_resource type="Animation" id="Animation_v3i5f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BasePanel/CenterContainer/LoginStatus:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_uo3rv"]
resource_name = "text_wait"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BasePanel/CenterContainer/LoginStatus:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.1, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0gfcu"]
_data = {
"RESET": SubResource("Animation_v3i5f"),
"text_wait": SubResource("Animation_uo3rv")
}

[sub_resource type="ButtonGroup" id="ButtonGroup_61i06"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_i4dw7"]

[sub_resource type="World3D" id="World3D_l15cn"]
camera_attributes = SubResource("CameraAttributesPractical_i4dw7")

[sub_resource type="InputEventKey" id="InputEventKey_0jlf5"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_8rove"]
events = [SubResource("InputEventKey_0jlf5")]

[node name="NetworkLogin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fn6r5")

[node name="BasePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="VBoxContainer" parent="BasePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -145.0
offset_right = 190.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="BasePanel/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "MORNINGSTAR"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BasePanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="UserContainer" type="HBoxContainer" parent="BasePanel/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="UserLabel" type="Label" parent="BasePanel/CenterContainer/UserContainer"]
layout_mode = 2
text = "Username: "

[node name="UserInput" type="LineEdit" parent="BasePanel/CenterContainer/UserContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
expand_to_text_length = true
caret_blink = true

[node name="PasswordContainer" type="HBoxContainer" parent="BasePanel/CenterContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="PasswordLabel" type="Label" parent="BasePanel/CenterContainer/PasswordContainer"]
layout_mode = 2
text = "Password: "

[node name="PasswordInput" type="LineEdit" parent="BasePanel/CenterContainer/PasswordContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
expand_to_text_length = true
virtual_keyboard_type = 6
caret_blink = true
secret = true
secret_character = "*"

[node name="HSeparator2" type="HSeparator" parent="BasePanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LoginButton" type="Button" parent="BasePanel/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "  Login  "

[node name="HSeparator3" type="HSeparator" parent="BasePanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RegisterPanelButton" type="Button" parent="BasePanel/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "  Register  "

[node name="HSeparator4" type="HSeparator" parent="BasePanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LoginStatus" type="RichTextLabel" parent="BasePanel/CenterContainer"]
layout_mode = 2
fit_content = true
autowrap_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0gfcu")
}

[node name="CharacterPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="char1" type="Button" parent="CharacterPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_61i06")
text = " Empty "

[node name="char2" type="Button" parent="CharacterPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_61i06")
text = " Empty "

[node name="char3" type="Button" parent="CharacterPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_61i06")
text = " Empty "

[node name="char4" type="Button" parent="CharacterPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_61i06")
text = " Empty "

[node name="CreateChar" type="VBoxContainer" parent="CharacterPanel/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Class" type="OptionButton" parent="CharacterPanel/HBoxContainer/CreateChar"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CharacterPanel/HBoxContainer/CreateChar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Aspect" type="OptionButton" parent="CharacterPanel/HBoxContainer/CreateChar"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="CharacterPanel/HBoxContainer/CreateChar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameEdit" type="LineEdit" parent="CharacterPanel/HBoxContainer/CreateChar"]
layout_mode = 2
placeholder_text = "Enter Name"

[node name="CreateButton" type="Button" parent="CharacterPanel/HBoxContainer/CreateChar"]
layout_mode = 2
text = "Create Character"

[node name="CharProfile" type="VBoxContainer" parent="CharacterPanel/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Class" type="Label" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
text = "Class"

[node name="Aspect" type="Label" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
text = "Aspect"

[node name="NameLabel" type="Label" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
text = "Name"

[node name="Level" type="Label" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
text = "Level: 1"

[node name="HSeparator4" type="HSeparator" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EnterWorld" type="Button" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
text = "Enter World"

[node name="HSeparator5" type="HSeparator" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="DeleteChar" type="Button" parent="CharacterPanel/HBoxContainer/CharProfile"]
layout_mode = 2
text = "Delete"

[node name="CenterContainer" type="CenterContainer" parent="CharacterPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="CharacterPanel/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="CharacterView" type="SubViewport" parent="CharacterPanel/HBoxContainer/CenterContainer/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_l15cn")
handle_input_locally = false
gui_disable_input = true
render_target_update_mode = 0

[node name="Player" parent="CharacterPanel/HBoxContainer/CenterContainer/SubViewportContainer/CharacterView" instance=ExtResource("3_egyge")]

[node name="Camera3D" parent="CharacterPanel/HBoxContainer/CenterContainer/SubViewportContainer/CharacterView/Player" index="1"]
v_offset = 2.0
projection = 0
fov = 5.0
size = 7.0

[node name="Skeleton3D" parent="CharacterPanel/HBoxContainer/CenterContainer/SubViewportContainer/CharacterView/Player" index="4"]
transform = Transform3D(-0.8, 0, -6.99382e-08, 0, 0.8, 0, 6.99382e-08, 0, -0.8, 0, 0, 0)

[node name="RegisterPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="VBoxContainer" parent="RegisterPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -145.0
offset_right = 190.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "MORNINGSTAR"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="UserContainer" type="HBoxContainer" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="UserLabel" type="Label" parent="RegisterPanel/CenterContainer/UserContainer"]
layout_mode = 2
text = "Username: "

[node name="UserInput" type="LineEdit" parent="RegisterPanel/CenterContainer/UserContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
expand_to_text_length = true
caret_blink = true

[node name="PasswordContainer" type="HBoxContainer" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="PasswordLabel" type="Label" parent="RegisterPanel/CenterContainer/PasswordContainer"]
layout_mode = 2
text = "Password: "

[node name="PasswordInput" type="LineEdit" parent="RegisterPanel/CenterContainer/PasswordContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
expand_to_text_length = true
virtual_keyboard_type = 6
caret_blink = true

[node name="EmailContainer" type="HBoxContainer" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="EmailLabel" type="Label" parent="RegisterPanel/CenterContainer/EmailContainer"]
layout_mode = 2
text = "Email: "

[node name="EmailInput" type="LineEdit" parent="RegisterPanel/CenterContainer/EmailContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
expand_to_text_length = true
virtual_keyboard_type = 5
caret_blink = true

[node name="HSeparator2" type="HSeparator" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RegisterButton" type="Button" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = " Request Registration "

[node name="CancelButton" type="Button" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
shortcut = SubResource("Shortcut_8rove")
text = " Cancel Registration "

[node name="HSeparator3" type="HSeparator" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RegisterStatus" type="RichTextLabel" parent="RegisterPanel/CenterContainer"]
layout_mode = 2
fit_content = true
autowrap_mode = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm"
initial_position = 1
size = Vector2i(200, 132)
popup_window = true
ok_button_text = "Delete"
dialog_text = "Delete this character?"
dialog_autowrap = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 1

[connection signal="pressed" from="BasePanel/CenterContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="BasePanel/CenterContainer/RegisterPanelButton" to="." method="_on_register_panel_button_pressed"]
[connection signal="toggled" from="CharacterPanel/HBoxContainer/VBoxContainer/char1" to="." method="_on_char_1_toggled"]
[connection signal="toggled" from="CharacterPanel/HBoxContainer/VBoxContainer/char2" to="." method="_on_char_2_toggled"]
[connection signal="toggled" from="CharacterPanel/HBoxContainer/VBoxContainer/char3" to="." method="_on_char_3_toggled"]
[connection signal="toggled" from="CharacterPanel/HBoxContainer/VBoxContainer/char4" to="." method="_on_char_4_toggled"]
[connection signal="pressed" from="CharacterPanel/HBoxContainer/CreateChar/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="CharacterPanel/HBoxContainer/CharProfile/EnterWorld" to="." method="_on_enter_world_pressed"]
[connection signal="pressed" from="CharacterPanel/HBoxContainer/CharProfile/DeleteChar" to="." method="_on_delete_char_pressed"]
[connection signal="pressed" from="RegisterPanel/CenterContainer/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="RegisterPanel/CenterContainer/CancelButton" to="." method="_on_cancel_button_pressed"]

[editable path="CharacterPanel/HBoxContainer/CenterContainer/SubViewportContainer/CharacterView/Player"]
